--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,16 @@ body {
     flex-direction: column;
     align-items: center;
   }
+
+  .heading > h1 {
+    margin: 0;
+  }
+
+  .heading > p {
+    font-size: 18px;
+    margin-top: 2px;
+    border-bottom: 1px solid grey;
+  }
   
   ol, ul {
     padding-left: 30px;
@@ -57,17 +67,20 @@ body {
   }
   
   .game-info {
-    margin-left: 30px;
-    font-size: 23px;
+    font-size: 20px;
     height: 500px;
-    margin: 10px auto;
+    width: 210px;
+    margin: 10px 30px;
   }
 
   .go-to-btn {
-    padding: 5px;
+    padding: 8px;
     font-size: 15px;
     margin: 4px;
+    cursor: pointer;
+    width: 140px;
   }
+
 
 /* Tablet/Desktop Styles */
   @media only screen and (min-width: 768px) {
@@ -84,6 +97,6 @@ body {
     }
 
     .game-info {
-      margin: 10px 30px;
+      font-size: 23px;
     }
   }
